RESOLVED FIXED101105
canonicalizedTitle() shouldn't convert 8 bit title strings to 16 bit
https://bugs.webkit.org/show_bug.cgi?id=101105
Summary canonicalizedTitle() shouldn't convert 8 bit title strings to 16 bit
Michael Saboff
Reported 2012-11-02 14:53:14 PDT
canonicalizedTitle() calls characters() on the title string and processes the title using UChar's. This should be updated to handle 8 bit title strings directly.
Attachments
Patch (6.23 KB, patch)
2012-11-05 12:29 PST, Michael Saboff
no flags
Michael Saboff
Comment 1 2012-11-05 12:29:17 PST
Darin Adler
Comment 2 2012-11-06 09:37:57 PST
Comment on attachment 172378 [details] Patch This is starting to feel a little excessive. Is there some way we can do this efficiently without a template?
WebKit Review Bot
Comment 3 2012-11-06 10:16:14 PST
Comment on attachment 172378 [details] Patch Clearing flags on attachment: 172378 Committed r133631: <http://trac.webkit.org/changeset/133631>
WebKit Review Bot
Comment 4 2012-11-06 10:16:17 PST
All reviewed patches have been landed. Closing bug.
Michael Saboff
Comment 5 2012-11-06 13:59:47 PST
(In reply to comment #2) > (From update of attachment 172378 [details]) > This is starting to feel a little excessive. Is there some way we can do this efficiently without a template? We set the goal of 98% strings that can be 8 bit are 8 bit. I think we're almost there. Templates are considered the best way to make mods where the existing character type (usually UChar) somewhat permeates the code. Here we have a StringBuffer<> that is used throughout the main function we're changing.
Note You need to log in before you can comment on or make changes to this bug.