canonicalizedTitle() shouldn't convert 8 bit title strings to 16 bit https://bugs.webkit.org/show_bug.cgi?id=101105

Reviewed by Darin Adler.

Turned canonicalizedTitle() into a templated function based on character type.
Changed call in updateTitle() to check the bitness of the title string to call
the right template flavor of canonicalizedTitle().
Made supporting changes by adding displayBufferModifiedByEncoding(LChar*, ...)
and made TextEncoding::displayBuffer() a templated function as well.

No new tests needed, as functionality is unchanged.

* dom/Document.cpp:
(WebCore::canonicalizedTitle):
(WebCore::Document::updateTitle):
(WebCore::Document::displayBufferModifiedByEncodingInternal):
* dom/Document.h:
(WebCore::Document::displayBufferModifiedByEncoding):
* platform/text/TextEncoding.h:
(TextEncoding):
(WebCore::TextEncoding::displayBuffer):


Canonical link: https://commits.webkit.org/119448@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133631 268f45cc-cd09-0410-ab3c-d52691b4dbfc